@@ -27,8 +27,9 @@
 #include <gtk/gtk.h>
 #include <glib/gi18n.h>
 #include <gconf/gconf-client.h>
+#include <libgnomevfs/gnome-vfs.h>
 #include <glibtop/mountlist.h>
-
+#include <glibtop/fsusage.h>
 #include "baobab.h"
 #include "baobab-utils.h"
 #include "baobab-prefs.h"
@@ -142,7 +143,9 @@ create_props_model (void)
 				  G_TYPE_BOOLEAN,	/* checkbox */
 				  G_TYPE_STRING,	/* device */
 				  G_TYPE_STRING,	/* mount point */
-				  G_TYPE_STRING		/* fs type */
+				  G_TYPE_STRING,	/* fs type */
+				  G_TYPE_STRING,	/* fs size */
+				  G_TYPE_STRING		/* fs used */
 				  );
 
 	return mdl;
@@ -191,7 +194,24 @@ create_tree_props (GladeXML *dlg_xml)
 							COL_TYPE, NULL);
 	gtk_tree_view_append_column (GTK_TREE_VIEW (tvw), col);
 
+	/* fourth text column */
+	cell = gtk_cell_renderer_text_new ();
+	col = gtk_tree_view_column_new_with_attributes (_("Total Size"),
+							cell, "markup",
+							COL_FS_SIZE, "text",
+							COL_FS_SIZE, NULL);
+	g_object_set (G_OBJECT (cell), "xalign", (gfloat) 1.0, NULL);
+	gtk_tree_view_append_column (GTK_TREE_VIEW (tvw), col);
 
+	/* fifth text column */
+	cell = gtk_cell_renderer_text_new ();
+	col = gtk_tree_view_column_new_with_attributes (_("Available"),
+							cell, "markup",
+							COL_FS_AVAIL, "text",
+							COL_FS_AVAIL, NULL);
+	g_object_set (G_OBJECT (cell), "xalign", (gfloat) 1.0, NULL);
+	gtk_tree_view_append_column (GTK_TREE_VIEW (tvw), col);
+	
 	model_props = create_props_model ();
 	gtk_tree_view_set_model (GTK_TREE_VIEW (tvw),
 				 GTK_TREE_MODEL (model_props));
@@ -238,19 +258,31 @@ fill_props_model (GtkWidget *dlg)
 	guint lo;
 	glibtop_mountlist mountlist;
 	glibtop_mountentry *mountentry, *mountentry_tofree;
-
+	guint64 fstotal, fsavail;
+	
 	mountentry_tofree = glibtop_get_mountlist (&mountlist, 0);
 
 	for (lo = 0, mountentry = mountentry_tofree; lo < mountlist.number;
 	     lo++, mountentry++) {
+	     
+	     	glibtop_fsusage fsusage;
+		gchar * total, *avail;
+		glibtop_get_fsusage (&fsusage, mountentry->mountdir);
+		fstotal = fsusage.blocks * fsusage.block_size;
+		fsavail = fsusage.bfree * fsusage.block_size;
+		total = gnome_vfs_format_file_size_for_display(fstotal);
+		avail = gnome_vfs_format_file_size_for_display(fsavail);
 		gtk_list_store_append (model_props, &iter);
 			gtk_list_store_set (model_props, &iter,
 					    COL_CHECK, TRUE,
-					    COL_DEVICE,
-					    mountentry->devname, COL_MOUNT,
-					    mountentry->mountdir, COL_TYPE,
-					    mountentry->type,
+					    COL_DEVICE, mountentry->devname, 
+					    COL_MOUNT, mountentry->mountdir, 
+					    COL_TYPE, mountentry->type,
+					    COL_FS_SIZE, total,
+					    COL_FS_AVAIL, avail,
 					    -1);
+		g_free(total);
+		g_free(avail);
 	}
 
 	g_free (mountentry_tofree);
